--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "date-fns": "^2.29.3",
     "embla-carousel-react": "8.5.1",
     "http": "latest",
+    "imagekit": "^6.0.0",
     "immer": "latest",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
